--- a/index.html
+++ b/index.html
@@ -76,17 +76,14 @@
   <script type="module">
     import { sdk } from 'https://esm.sh/@farcaster/miniapp-sdk';
     import { ethers } from 'https://cdn.jsdelivr.net/npm/ethers@6.13.0/dist/ethers.min.js';
+    import contractABI from './contract.json' assert { type: 'json' };
 
     let gameState = { choice: null, computerChoice: null, result: null };
     let isSdkReady = false;
 
-    const CONTRACT_ADDRESS = '0x99407dc640bdb6853d1c706a7122d85cbffce935';
-    let contractAbi = null;
-
-    async function loadAbi() {
-      const res = await fetch('contract.json');
-      contractAbi = await res.json();
-    }
+    const contractData = {
+      address: '0x99407dc640bdb6853d1c706a7122d85cbffce935'
+    };
 
     document.addEventListener('DOMContentLoaded', async () => {
       try {
@@ -94,14 +91,15 @@
         console.log('SDK Ready - Mini App Loaded');
         isSdkReady = true;
 
-        await loadAbi();
-
+        // Game buttons
         document.getElementById('rock-btn').addEventListener('click', () => makeChoice('rock'));
         document.getElementById('paper-btn').addEventListener('click', () => makeChoice('paper'));
         document.getElementById('scissors-btn').addEventListener('click', () => makeChoice('scissors'));
+
+        // Reward button
         document.getElementById('reward-btn').addEventListener('click', claimReward);
       } catch (error) {
-        console.error('SDK Error:', error);
+        console.error('SDK Initialization Error:', error);
       }
     });
 
@@ -134,25 +132,22 @@
         if(!provider) throw new Error('Ethereum provider not available');
 
         const accounts = await provider.request({ method: 'eth_accounts' });
-        const userAddress = accounts[0];
+        const from = accounts[0];
 
-        const iface = new ethers.Interface(contractAbi);
+        // Use ethers.Interface to encode function data
+        const contractInterface = new ethers.Interface(contractABI);
+        const txData = contractInterface.encodeFunctionData('claimReward');
 
-        // Check if user already claimed
-        const dataCheck = iface.encodeFunctionData('hasClaimed', [userAddress]);
-        const result = await provider.request({ method: 'eth_call', params: [{ to: CONTRACT_ADDRESS, data: dataCheck }] });
-        const alreadyClaimed = ethers.decodeBoolean(result);
-        if(alreadyClaimed) {
-          document.getElementById('result').innerText += ' ⚠️ Reward already claimed!';
-          document.getElementById('reward-btn').classList.remove('show');
-          return;
-        }
+        const tx = {
+          to: contractData.address,
+          from,
+          data: txData
+        };
 
-        // Claim reward
-        const txData = iface.encodeFunctionData('claimReward', []);
-        const tx = { to: CONTRACT_ADDRESS, from: userAddress, data: txData };
-
-        const txHash = await provider.request({ method: 'eth_sendTransaction', params: [tx] });
+        const txHash = await provider.request({
+          method: 'eth_sendTransaction',
+          params: [tx]
+        });
 
         document.getElementById('reward-btn').classList.remove('show');
         document.getElementById('result').innerText += ` 🎉 Claimed reward! TX: ${txHash}`;
