--- a/index.html
+++ b/index.html
@@ -76,30 +76,34 @@
   <script type="module">
     import { sdk } from 'https://esm.sh/@farcaster/miniapp-sdk';
     import { ethers } from 'https://cdn.jsdelivr.net/npm/ethers@6.13.0/dist/ethers.min.js';
-    import contractABI from './contract.json' assert { type: 'json' };
 
     let gameState = { choice: null, computerChoice: null, result: null };
     let isSdkReady = false;
+    let contractABI;
 
     const contractData = {
       address: '0x99407dc640bdb6853d1c706a7122d85cbffce935'
     };
 
+    async function loadContractABI() {
+      const res = await fetch('./contract.json');
+      contractABI = await res.json();
+    }
+
     document.addEventListener('DOMContentLoaded', async () => {
       try {
+        await loadContractABI();
         await sdk.actions.ready();
         console.log('SDK Ready - Mini App Loaded');
         isSdkReady = true;
 
-        // Game buttons
         document.getElementById('rock-btn').addEventListener('click', () => makeChoice('rock'));
         document.getElementById('paper-btn').addEventListener('click', () => makeChoice('paper'));
         document.getElementById('scissors-btn').addEventListener('click', () => makeChoice('scissors'));
-
-        // Reward button
         document.getElementById('reward-btn').addEventListener('click', claimReward);
+
       } catch (error) {
-        console.error('SDK Initialization Error:', error);
+        console.error('Initialization Error:', error);
       }
     });
 
@@ -126,31 +130,23 @@
 
     async function claimReward() {
       try {
-        if(!isSdkReady) throw new Error('SDK not ready');
+        if (!isSdkReady) throw new Error('SDK not ready');
 
         const provider = await sdk.wallet.getEthereumProvider();
-        if(!provider) throw new Error('Ethereum provider not available');
+        if (!provider) throw new Error('Ethereum provider not available');
 
         const accounts = await provider.request({ method: 'eth_accounts' });
         const from = accounts[0];
 
-        // Use ethers.Interface to encode function data
-        const contractInterface = new ethers.Interface(contractABI);
-        const txData = contractInterface.encodeFunctionData('claimReward');
+        const iface = new ethers.Interface(contractABI);
+        const data = iface.encodeFunctionData('claimReward');
 
-        const tx = {
-          to: contractData.address,
-          from,
-          data: txData
-        };
-
-        const txHash = await provider.request({
-          method: 'eth_sendTransaction',
-          params: [tx]
-        });
+        const tx = { to: contractData.address, from, data };
+        const txHash = await provider.request({ method: 'eth_sendTransaction', params: [tx] });
 
         document.getElementById('reward-btn').classList.remove('show');
         document.getElementById('result').innerText += ` 🎉 Claimed reward! TX: ${txHash}`;
+
       } catch (error) {
         console.error('TX Error:', error);
         document.getElementById('result').innerText += ' ❌ Reward claim failed. ' + (error.message || '');
