--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <script type="module">
     import { sdk } from 'https://esm.sh/@farcaster/miniapp-sdk';
-    import { ethers } from 'https://cdn.jsdelivr.net/npm/ethers@6.13.0/dist/ethers.esm.min.js';
+    import { ethers } from "https://cdn.jsdelivr.net/npm/ethers@6.8.3/dist/ethers.esm.min.js";
 
     const statusDiv = document.getElementById('status');
     const rewardBtn = document.getElementById('reward-btn');
